Replace Collectors.toList() Stream.toList()